--- a/lupin36079.md
+++ b/lupin36079.md
@@ -15,9 +15,11 @@ timezone: UTC+8
 
 <!-- Content_START -->
 
-### 2025.07.11
-
-笔记内容
+### 2025.03.03
+阅读关于web3的基础概念
+#### 1.web3:代表了一个更加开放、自由、去中心化的互联网形态,每个人都可以参与并拥有自己的数据权益.
+#### 2.Web3的核心:在Web3的数字化生态中用户可以真正拥有自己的数据，并且交易受到加密技术保障。
+#### 3.Web3 的潜力巨大，可能会彻底改变我们的生活方式。
 
 ### 2025.07.12
 
