--- a/wuyi5111.md
+++ b/wuyi5111.md
@@ -92,7 +92,31 @@ SocialFi平台：用户控制社交图谱和数据
 
 实践启示：区块链技术正在重塑基层治理的信任机制，但需在技术特性与社会需求之间寻找更精准的契合点。
 
-
+### 2025.03.04
+Web2 与 Web3 对比 
+ 
+主要区别 
+1. 数据所有权
+   - Web2：数据属于公司，用户无权控制。
+   - Web3：数据由用户自己掌握，隐私和资产更安全。
+ 
+2. 审查与自由
+    Web2：平台可以随意删除内容或账户。
+   Web3：内容无法被随意审查，因为去中心化网络不受单一机构控制。
+ 
+3. 支付方式
+    Web2：依赖传统支付系统（如支付宝、信用卡），可能涉及手续费或限制。
+    Web3：使用加密货币（如 ETH），支付无需中间人，更自由。
+ 
+总结：
+Web3 的优势 
+用户无需授权即可使用服务。
+无需担心被平台封禁或限制。
+具有隐私。
+ 
+Web3 的挑战 
+速度慢：去中心化交易处理较慢。
+用户体验差：操作复杂，需要额外学习。门槛高， 成本高。
 ### 2025.07.11
 
 笔记内容
